load(
    "@io_bazel_rules_docker//container:container.bzl",
    "container_image",
)

container_image(
    name = "version-container",
    base = "//:passwd-image",
    directory = "/",
    files = ["//:get-version"],
    tars = [
        "//rpm:libguestfs-tools",
    ],
)

container_image(
    name = "libguestfs-tools-image",
    architecture = select({
        "@io_bazel_rules_go//go/platform:linux_ppc64le": "ppc64le",
        "//conditions:default": "amd64",
    }),
    base = ":version-container",
    directory = "/",
    entrypoint = ["/bin/bash"],
    visibility = ["//visibility:public"],
)
