load(
    "@io_bazel_rules_docker//container:container.bzl",
    "container_image",
)
load("@bazel_tools//tools/build_defs/pkg:pkg.bzl", "pkg_tar")

pkg_tar(
    name = "libguestfs-appliance",
    srcs = [
        ":appliance/README.fixed",
        ":appliance/initrd",
        ":appliance/kernel",
        ":appliance/root",
    ],
    mode = "0644",
    package_dir = "/usr/local/lib/guestfs/appliance",
    visibility = ["//visibility:public"],
)

container_image(
    name = "version-container",
    base = "//:passwd-image",
    directory = "/",
    files = [
        "//:get-version",
    ],
    tars = [
        "//rpm:libguestfs-tools",
        ":libguestfs-appliance",
    ],
)

container_image(
    name = "libguestfs-tools-image",
    architecture = select({
        "@io_bazel_rules_go//go/platform:linux_ppc64le": "ppc64le",
        "//conditions:default": "amd64",
    }),
    base = ":version-container",
    directory = "/",
    entrypoint = ["/bin/bash"],
    visibility = ["//visibility:public"],
)
